--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Olaf Schindler",
   "license": "ISC",
   "dependencies": {
-    "browser-sync": "^2.24.4",
+    "boom": "^7.2.0",
+    "browser-sync": "^2.24.5",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-clean-css": "^3.9.4",
@@ -18,7 +19,9 @@
     "gulp-rename": "^1.3.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglyfly": "^1.4.2"
+    "gulp-uglyfly": "^1.4.2",
+    "hawk": "^7.0.7",
+    "hoek": "^5.0.3"
   },
   "devDependencies": {
     "jquery": "^3.3.1",
