--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "boom": "^7.2.0",
     "browser-sync": "^2.24.5",
+    "deep-extend": "^0.6.0",
+    "extend": "^3.0.2",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-clean-css": "^3.9.4",
@@ -21,7 +23,9 @@
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglyfly": "^1.4.2",
     "hawk": "^7.0.7",
-    "hoek": "^5.0.3"
+    "hoek": "^5.0.3",
+    "lodash": "^4.17.11",
+    "merge": "^1.2.1"
   },
   "devDependencies": {
     "jquery": "^3.3.1",
