--- a/package.json
+++ b/package.json
@@ -1,36 +1,29 @@
 {
   "name": "PlethoraApp",
-  "version": "1.0.1",
-  "description": "Showcase for Plathora Project",
+  "version": "2.0.0",
+  "description": "Plethora minisite",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"This is a test command\" && exit 1"
+    "test": "echo \"This is a test command\" && exit 1",
+    "dev": "gulp dev",
+    "build": "gulp build"
   },
   "author": "Olaf Schindler",
   "license": "ISC",
-  "dependencies": {
-    "boom": "^7.3.0",
+  "devDependencies": {
     "browser-sync": "^2.26.7",
-    "deep-extend": "^0.6.0",
-    "extend": "^3.0.2",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^5.0.0",
-    "gulp-clean-css": "^3.10.0",
+    "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
+    "gulp-clean-css": "^4.2.0",
     "gulp-coffee": "^3.0.3",
     "gulp-include": "^2.4.1",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.0.0",
+    "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-uglyfly": "^1.4.2",
-    "hawk": "^7.0.10",
-    "hoek": "^5.0.4",
-    "lodash": "^4.17.15",
-    "merge": "^1.2.1"
-  },
-  "devDependencies": {
     "jquery": "^3.4.1",
     "normalize-scss": "^7.0.1",
-    "owl.carousel": "^2.3.4",
     "swiper": "^4.5.1"
   }
 }
