--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-terser": "^1.2.0",
     "gulp-uglyfly": "^1.4.2",
     "jquery": "^3.4.1",
     "normalize-scss": "^7.0.1",
-    "swiper": "^4.5.1"
+    "swiper": "^4.5.1",
+    "terser": "^4.6.6"
   }
 }
