--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "PlethoraApp",
-  "version": "2.0.1",
-  "versionMessage": "Poprawki z maila",
+  "version": "2.0.2",
+  "versionMessage": "Poprawione ściezki do plików favicon",
   "description": "Plethora minisite",
   "main": "index.html",
   "scripts": {
