--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "PlethoraApp",
-  "version": "2.0.3",
-  "versionMessage": "Jedna kolumna w Info i powrót licznika",
+  "version": "2.0.4",
+  "versionMessage": "Poprawki z maila, cz. 3",
   "description": "Plethora minisite",
   "main": "index.html",
   "scripts": {
