--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "PlethoraApp",
-  "version": "2.0.6",
-  "versionMessage": "Czyszczenie folderu dist",
+  "version": "2.1.0",
+  "versionMessage": "Poprawki dotyczące bezpieczeństwa",
   "description": "Plethora minisite",
   "main": "index.html",
   "scripts": {
@@ -12,22 +12,22 @@
   "author": "Olaf Schindler",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.26.12",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-clean": "^0.4.0",
-    "gulp-clean-css": "^4.2.0",
+    "gulp-clean-css": "^4.3.0",
     "gulp-coffee": "^3.0.3",
     "gulp-include": "^2.4.1",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
-    "gulp-terser": "^1.2.0",
+    "gulp-terser": "^1.3.2",
     "gulp-uglyfly": "^1.4.2",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "normalize-scss": "^7.0.1",
-    "swiper": "^4.5.1",
-    "terser": "^4.6.6"
+    "swiper": "^6.1.1",
+    "terser": "^5.0.0"
   }
 }
