--- a/package.json
+++ b/package.json
@@ -1,36 +1,34 @@
 {
-  "name": "PlethoraApp",
-  "version": "2.1.0",
-  "versionMessage": "Poprawki dotyczące bezpieczeństwa",
+  "name": "prlg",
+  "version": "3.0.0",
   "description": "Plethora minisite",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"This is a test command\" && exit 1",
-    "dev": "gulp dev",
-    "build": "gulp build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Olaf Schindler",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.26.12",
-    "deep-extend": "^0.6.0",
+    "browser-sync": "^2.27.9",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^7.0.1",
+    "gulp-autoprefixer": "^6.1.0",
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-coffee": "^3.0.3",
+    "gulp-dart-sass": "^1.0.2",
     "gulp-include": "^2.4.1",
     "gulp-rename": "^2.0.0",
-    "gulp-replace": "^1.0.0",
-    "gulp-sass": "^4.1.0",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-terser": "^1.3.2",
-    "gulp-uglyfly": "^1.4.2",
-    "jquery": "^3.5.1",
-    "minimist": "^1.2.5",
+    "gulp-replace": "^1.1.3",
+    "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-terser": "^2.1.0",
+    "gulp-uglyfly": "^1.2.3",
+    "jquery": "^3.6.0",
+    "minimist": "^1.2.6",
+    "node-sass": "^7.0.1",
     "normalize-scss": "^7.0.1",
-    "swiper": "^6.1.1",
-    "terser": "^5.0.0",
-    "yargs-parser": "^19.0.1"
+    "swiper": "^8.1.0",
+    "terser": "^5.12.1",
+    "yargs-parser": "^21.0.1"
   }
 }
