--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Plethora minisite",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "gulp dev",
+    "build": "gulp build"
   },
   "author": "Olaf Schindler",
   "license": "ISC",
