--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "prlg",
   "version": "3.0.0",
+  "versionMessage": "Wersja 3.0",
   "description": "Plethora minisite",
   "main": "index.html",
   "scripts": {
