--- a/src/ajax/projects.json
+++ b/src/ajax/projects.json
@@ -11,27 +11,27 @@
     "title": "Residential housing in Nysa",
     "paragraph": "Mirabela Jurczenko, Bartosz Kowal, Wojciech Mazan, Bartłomiej Poteralski, Apolonia Siesarow",
     "place": "Nysa, PL",
-    "award": "Złty medal",
+    "award": "Złoty medal",
     "comment": "public procurement"},
 	{
     "header": "2021",
     "title": "Residential housing in Nysa",
     "paragraph": "Mirabela Jurczenko, Bartosz Kowal, Wojciech Mazan, Bartłomiej Poteralski, Apolonia Siesarow",
     "place": "Nysa, PL",
-    "award": "Złty medal",
+    "award": "Złoty medal",
     "comment": "public procurement"},
 	{
     "header": "2021",
     "title": "Residential housing in Nysa",
     "paragraph": "Mirabela Jurczenko, Bartosz Kowal, Wojciech Mazan, Bartłomiej Poteralski, Apolonia Siesarow",
     "place": "Nysa, PL",
-    "award": "Złty medal",
+    "award": "Złoty medal",
     "comment": "public procurement"},
 	{
     "header": "2020",
     "title": "Residential housing in Nysa",
     "paragraph": "Mirabela Jurczenko, Bartosz Kowal, Wojciech Mazan, Bartłomiej Poteralski, Apolonia Siesarow",
     "place": "Nysa, PL",
-    "award": "Złty medal",
+    "award": "Złoty medal",
     "comment": "public procurement"}
 ]}
