--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prlg",
-  "version": "3.0.5beta",
-  "versionMessage": "Poprawki 19.05.22",
+  "version": "3.0.6",
+  "versionMessage": "Publikacja",
   "description": "Plethora minisite",
   "main": "index.html",
   "scripts": {
